[package]
name = "rendrok"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
dirs = "4.0.0"
futures = "0.3.25"
lazy_static = "1.4.0"
nix = "0.25.0"
reqwest = { version = "0.11.12", features = ["json", "tokio-socks"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
signal-hook = "0.3.14"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
tokio = { version = "1.21.2", features = ["full"] }
